--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -10,6 +10,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- 이전 버전 연결을 위한 unpkg CDN 코드 -->
+    <script src="https://unpkg.com/axios@0.26.1/dist/axios.min.js"></script>
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
