--- a/maintenance.html
+++ b/maintenance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TraceBoard - 서버 점검 중</title>
+    <title>Devzip - 서버 점검 중</title>
     <style>
         * {
             margin: 0;
@@ -198,7 +198,7 @@
         <div class="contact-info">
             <p>문의사항이 있으시면 아래로 연락해 주세요.</p>
             <p>
-                <a href="mailto:support@traceboard.com">support@traceboard.com</a>
+                <a href="mailto:support@traceboard.com">momo990305@gmail.com</a>
             </p>
         </div>
     </div>
@@ -208,7 +208,7 @@
         function updateTime() {
             const now = new Date();
             const timeString = now.toLocaleTimeString('ko-KR');
-            document.title = `TraceBoard - 서버 점검 중 (${timeString})`;
+            document.title = `Devzip - 서버 점검 중 (${timeString})`;
         }
 
         // 30초마다 페이지 새로고침하여 서버 복구 확인
