server maintain view

--- a/maintenance.html
+++ b/maintenance.html
@@ -174,7 +174,7 @@
             서비스 점검 중
         </div>
         
-        <h1 class="maintenance-title">TraceBoard</h1>
+        <h1 class="maintenance-title">Devzip</h1>
         <p class="maintenance-subtitle">
             더 나은 서비스를 위해 시스템 점검을 진행하고 있습니다.
         </p>
@@ -198,7 +198,7 @@
         <div class="contact-info">
             <p>문의사항이 있으시면 아래로 연락해 주세요.</p>
             <p>
-                <a href="mailto:support@traceboard.com">momo990305@gmail.com</a>
+                <a href="mailto:momo990305@gmail.com">momo990305@gmail.com</a>
             </p>
         </div>
     </div>
