SEO 최적화를 위해 메타 태그, Open Graph, Twitter Card, hreflang, Canonical URL, JSON-LD 구조화된 데이터를 추가 및 개선했습니다.

--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -1,44 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="3q0sdFuA1uZcLxPFULmDnyTsXEvmwxGl5ppLdCpfQuI" />
+    <meta
+      name="google-site-verification"
+      content="3q0sdFuA1uZcLxPFULmDnyTsXEvmwxGl5ppLdCpfQuI"
+    />
+
+    <!-- Primary Meta Tags -->
+    <title>
+      DevZip - 개발자의 사이드 프로젝트 허브 | Developer's Side Project Hub
+    </title>
+    <meta
+      name="title"
+      content="DevZip - 개발자의 사이드 프로젝트 허브 | Developer's Side Project Hub"
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="DevZip은 개발자를 위한 사이드 프로젝트 허브입니다. Command Stack, Conflux 등 개발자 도구와 실험적인 프로젝트를 만나보세요. DevZip is a hub for developer side projects including Command Stack and Conflux."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="keywords"
+      content="DevZip, devzip, Command Stack, commandstack, Conflux, conflux, 개발자도구, developer tools, side project, 사이드프로젝트, task management, 할일관리, notification hub, 알림관리"
+    />
+    <meta name="author" content="Hoooon22" />
+    <meta name="robots" content="index, follow" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Hoooon22's DevZip</title>
+    <!-- Language Alternates -->
+    <link rel="alternate" hreflang="ko" href="https://devzip.cloud/" />
+    <link rel="alternate" hreflang="en" href="https://devzip.cloud/" />
+    <link rel="alternate" hreflang="x-default" href="https://devzip.cloud/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://devzip.cloud/" />
+    <meta property="og:title" content="DevZip - Developer's Side Project Hub" />
+    <meta
+      property="og:description"
+      content="A hub for developer side projects. Discover Command Stack, Conflux, and more experimental tools built by developers, for developers."
+    />
+    <meta property="og:site_name" content="DevZip" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:locale:alternate" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://devzip.cloud/" />
+    <meta
+      property="twitter:title"
+      content="DevZip - Developer's Side Project Hub"
+    />
+    <meta
+      property="twitter:description"
+      content="A hub for developer side projects. Discover Command Stack, Conflux, and more."
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://devzip.cloud/" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
